--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+    <meta name="google-site-verification" content="H7EHIpr_a9c4v60r0YzU-j-c1aVVFcHxLmDaXGTJ_LQ" />
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -292,4 +293,5 @@
     }
 </script>
 </body>
+
 </html>
