--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#111827">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
     <title>EDU AI PRO - 7. Sınıf</title>
     <style>
         :root { --p: #1e3a8a; --s: #3b82f6; --acc: #ef4444; --bg: #f1f5f9; --suc: #22c55e; --war: #f59e0b; }
@@ -297,5 +298,6 @@
 </body>
 
 </html>
+
 
 
